--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./index.js --exec babel-node"
+    "dev": "nodemon ./index.ts --exec babel-node --extensions .ts"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "@types/node": "^15.12.4",
     "nodemon": "^2.0.7",
-    "prisma": "^2.25.0"
+    "prisma": "^2.25.0",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.14.5",
     "@graphql-tools/schema": "^7.1.5",
     "@prisma/client": "^2.25.0",
     "apollo-server-express": "^2.25.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "ts-node": "^10.0.0"
   }
 }
