--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.12.4",
     "nodemon": "^2.0.7",
     "prisma": "^2.25.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   },
   "dependencies": {
@@ -20,9 +25,12 @@
     "@graphql-tools/schema": "^7.1.5",
     "@prisma/client": "^2.25.0",
     "apollo-server-express": "^2.25.1",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "ts-node": "^10.0.0"
   }
 }
